Readability Fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@
   }
 
   p { 
-    line-height: 21px;
+    line-height: 25px;
     font-size: 18px; 
     font-weight: 100;
   }
@@ -521,7 +521,7 @@
 
   .services-card > .content > .list > .item {
     margin-bottom: 12px;
-    line-height: 19px;
+    line-height: 25px;
   }
 
   .services-background {
